# isdayoff-rust

./: .gitignore  Cargo.toml  LICENSE  README.MD
src/: api.rs  utils.rs
src/api/: request.rs
