[package]
name = "isdayoff-rust"
description = "Checking the date for belonging to a non-working day, according to official decrees and orders."
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
authors = ["windx-foobar <bezalkogoln1ycoder@gmail.com>"]
homepage = "https://github.com/windx-foobar/isdayoff-rust"
repository = "https://github.com/windx-foobar/isdayoff-rust"
readme = "README.MD"


[dependencies]
chrono = "0.4.38"
reqwest = "0.12.7"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros"] }
